# flowcheck-eurosys25

./: LICENSE  README.md  build.sh
Cython_Updater/: CMakeLists.txt  build.sh  checkpoint_updater.py  gpt_updater.py  mem_extract.cpp  mem_extract.hpp  mem_extract_c.cpp  mem_extract_c.pyx  setup.py
Data_Extractor/: Makefile  copy_c.pyx  extractor.cpp  extractor.hpp  main.cpp  main_multi.cpp  main_old.cpp  main_old2.cpp  setup.py  updater.py
Packet_Dump/: readme.md
Packet_Dump/dma_dump/: Makefile  dmafwd.c
Packet_Dump/dpdk_dump/: Makefile  l3fwd.h  l3fwd_em.c  l3fwd_em_hlm.h  l3fwd_em_sequential.h  main.c  shared.h
Packet_Dump/dpdk_dump/net/: rte_immdt.h  rte_reth.h
Packet_Parser/cpp_decode_inbound/: Makefile  unpack.cpp  unpack.hpp
Packet_Parser/cpp_decode_outbound/: unpack.cpp  unpack.hpp
Workload_Gen/: gpt_test.py  run_dist_gpt.sh
test_packages/: allreduce+p2p.pcapng  allreduce+partial_p2p.pcapng  allreduce+partial_p2p_new.pcapng  allreduce_addstep.pcapng  iter_40000_p2p.pcapng  iter_40000_p2p_iter10.pcapng  iter_40000_p2p_iter10_2.pcapng  iter_40000_p2p_iter10_3.pcapng  iter_40000_p2p_iter2.pcapng  iter_80000.pcapng  iter_80000_p2p.pcapng  rdma32.pcapng
tools/: estimate_packet_loss.py  hex_decode.py  pcapSender.py  running_scripts.md  save_for_pcap.py
